# django-wafris

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
django_wafris/: apps.py  middleware.py  settings.py  tests.py  views.py  wafris_core.py
django_wafris/lua/: wafris_core.lua
wafrisdemo/: asgi.py  settings.py  urls.py  wsgi.py
